New authentication code added

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -11,5 +11,9 @@ api:
     controller: App\Controller\AuthController::api
 
 login_check:
-    path:     /login_check
-    methods:  [POST]
+    path:     /api/login_check
+    methods:  [GET]
+
+login:
+    path:     /login
+    methods:  [GET]
